add product description and review to product details page

--- a/cloudcart/package.json
+++ b/cloudcart/package.json
@@ -17,10 +17,13 @@
     "dayjs": "^1.11.18",
     "next": "15.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@iconify/react": "^6.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -33,7 +36,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "react-lazy-load-image-component": "^1.6.0",
-    "typescript": "^5",
-    "@iconify/react": "^6.0.2"
+    "typescript": "^5"
   }
 }
